--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "despachobot",
+  "name": "nochepelibot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
-    "node-webcam": "^0.8.0"
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "discord-api-types": "^0.32.0",
+    "discord.js": "^13.6.0"
   }
 }
