--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "target": "es6",
         "moduleResolution": "node",
         "strictBindCallApply": true,
-        "strictFunctionTypes": true,
+        "strictFunctionTypes": false,
         "strictPropertyInitialization": false,
         "strictNullChecks": false,
         "checkJs": true,
