--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "nochepelibot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "bin": "src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
