--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.13.0",
-    "@discordjs/rest": "^0.4.1",
-    "@types/node": "^17.0.31",
-    "discord-api-types": "^0.32.0",
-    "discord.js": "^13.6.0"
+    "discord.js": "^14.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11"
   }
 }
